# pyaprilaire

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml  tests.yml
pyaprilaire/: client.py  const.py  mock_server.py  packet.py  socket_client.py  test_connection.py  utils.py
tests/: __init__.py  conftest.py  test_client.py  test_packet.py  test_socket_client.py
