[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaprilaire"
version = "0.7.4"
readme = "README.md"
dependencies = [
    "crc >= 4"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest-asyncio", "pytest-cov"]

[tool.bumpver]
current_version = "0.7.4"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
norecursedirs = [
    ".git",
]
log_format = "%(asctime)s.%(msecs)03d %(levelname)-8s %(threadName)s %(name)s:%(filename)s:%(lineno)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "auto"
filterwarnings = []

[tool.coverage.run]
omit = [
    "pyaprilaire/mock_server.py",
]

[tool.isort]
profile = "black" 
